mutation/Images/difference/591/variations.txt
Microservice listening on http://localhost:3000/preview
<div>Bug</div>{NumberQuestions:true}
/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:287
        throw invalidChar(read())
        ^

SyntaxError: JSON5: invalid character '<' at 1:1
    at syntaxError (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1083:17)
    at invalidChar (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1028:12)
    at Object.value (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:287:15)
    at lex (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:78:42)
    at Object.parse (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:25:17)
    at Object.exports.render (/home/ubuntu/checkbox.io-micro-preview/marqdown.js:15:26)
    at /home/ubuntu/checkbox.io-micro-preview/index.js:23:29
    at FSReqCallback.readFileAfterClose [as oncomplete] (internal/fs/read_file_context.js:63:3) {
  lineNumber: 1,
  columnNumber: 1
}
